2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.h:
	* makeinfo/xml.c (xml_get_assoc_for_id, xml_associate_title_with_id):
	new functions.
	(xml_insert_indexentry): call execute_string(xref) instead of creating
	references directly.

	* makeinfo/makeinfo.c (cm_xref): check to see if xref is being made to
	an @unnumbered, and only one argument is given.  issue a warning, use
	@unnumbered's title as the third argument.

	* makeinfo/sectioning.c (sectioning_underscore): keep track of
	unnumbered sections, and their node names.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (sectioning_underscore): for Docbook, always
	provide label attribute for chapter and unnumbered.
	(handle_enum_increment): simplified enumeration constraints, and
	changed to follow TeX way.  Moved marker handling to ...
	(cm_chapter, cm_unnumbered, cm_appendix): here.
	(cm_appendix): restart numbering.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.h:
	* makeinfo/insertion.c: new rawdocbook and rawxml insertion types to
	provide better block names in error messages (instead of "rawhtml" for
	everything.)
	(current_item_function, insertion_type_pname, find_type_from_name)
	(begin_insertion, end_insertion, discard_insertions, cm_docbook)
	(cm_xml, cm_item): honor new types.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_image): issue only a warning instead of an
	error when .txt file is unreadable, to better comply with the manual.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (sectioning_underscore): insert label="" only
	when the output format is Docbook.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_end): get rest of the line before returning
	in case of error, so the parameter to @end does not get leaked into
	the output document.

	* makeinfo/makeinfo.c (discard_until): when the expected string is not
	found, check to see if we are looking for @end, and if so issue a more